# keri-challenge

./: .cursorignore  .cursorindexingignore  .gitignore  API-README.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: 00-style-canon.mdc  01-project-charter.mdc  02-lazy-engineering-antipattern.mdc  05-system-flow.mdc  10-architecture-py.mdc  12-time-discipline.mdc  15-settings.mdc  20-security.mdc  22-api-design.mdc  25-authentication.mdc  30-errors.mdc  35-resilience.mdc  40-validation.mdc  45-persistence.mdc  50-testing.mdc  55-api-contract-testing.mdc  65-content-processing.mdc  70-async-events.mdc  71-task-management.mdc  74-documentation-first-workflow.mdc  75-transformation-pipeline.mdc  80-tooling.mdc  85-vscode.mdc  90-deployment-strategy.mdc  95-code-generation.mdc  RULES_INDEX.md
.github/: README.md  copilot-instructions.md
.github/instructions/: api-contract-testing.instructions.md  api-design.instructions.md  authentication.instructions.md  code-generation.instructions.md  documentation-first-workflow.instructions.md  errors.instructions.md  lazy-engineering-antipattern.instructions.md  persistence.instructions.md  project-charter.instructions.md  security.instructions.md  settings.instructions.md  style-canon.instructions.md  task-management.instructions.md  testing.instructions.md  tooling.instructions.md  validation.instructions.md  vscode.instructions.md
docs/: Modernization Roadmap for the Python Codebase.md  action-plan.md  interview-notes.md  rubric.md  transplate-doc.md
docs/adr/: ADR-001-separation-of-concerns.md  ADR-007-clock-discipline-architecture.md  ADR-012-resilience-philosophy.md  ADR-050-documentation-first-development-workflow.md
docs/keri-spec/: spec-body.md
src/api/: __init__.py  app.py  resources.py  storage.py
tests/api/: test_registration.py
