[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "keri"
version = "2.0.0-dev3"
description = "Key Event Receipt Infrastructure"
readme = "README.md"
requires-python = "==3.14.2"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Samuel M. Smith", email = "smith.samuel.m@gmail.com"},
    {name = "Jay-Alexander Elliot", email = "alexander.elliot.it@protonmail.com"},
]
keywords = ["keri", "cryptography", "decentralized-identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]

dependencies = [
    "lmdb>=1.7.3",
    "pysodium>=0.7.18",
    "blake3>=1.0.5",
    "msgpack>=1.1.0",
    "cbor2>=5.6.5",
    "multidict>=6.6.3",
    "ordered-set>=4.1.0",
    "hio>=0.7.14",
    "multicommand>=1.0.0",
    "jsonschema>=4.24.0",
    "falcon>=4.0.2",
    "hjson>=3.1.0",
    "PyYaml>=6.0.2",
    "apispec>=6.8.2",
    "mnemonic>=0.21",
    "PrettyTable>=3.16.0",
    "http_sfv>=0.9.9",
    "cryptography>=45.0.5",
    "semver>=3.0.4",
    "qrcode>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/WebOfTrust/keripy"
Documentation = "https://keri.readthedocs.io/"
Changelog = "https://keri.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/WebOfTrust/keripy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
keri = ["**/*.json", "**/*.cesr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
